--- a/release.project.json
+++ b/release.project.json
@@ -4,6 +4,7 @@
 		"$className": "DataModel",
 		"ReplicatedStorage": {
 			"$className": "ReplicatedStorage",
+			"$ignoreUnknownInstances": true,
 
 			"Iris": {
 				"$path": "lib"
@@ -12,12 +13,14 @@
 
 		"ServerScriptService": {
 			"$className": "ServerScriptService",
+			"$ignoreUnknownInstances": true,
 			"$path": "src/Server"
 		},
 		"StarterPlayer": {
 			"$className": "StarterPlayer",
 			"StarterPlayerScripts": {
 				"$className": "StarterPlayerScripts",
+				"$ignoreUnknownInstances": true,
 				"$path": "src/Client"
 			}
 		}
